--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,33 @@
-#canvas{
+#bag{
+  width: 200px;
+  height: 400px;
+  margin: 0 auto;
+  background: url(../images/boxing-bag.png) center no-repeat;
+  background-size: 150%;
+}
+
+#bag.burst{
+  background: url(../images/0_gob_584.png) center no-repeat;
+  background-size: 200%;
+}
+
+#bag-health{
+  width: 200px;
+  border: 4px solid #000;
+  margin: 0 auto 20px auto;
+}
+
+#bag-health div{
+  height: 20px; 
+  background: crimson;
+}
+
+#controls{
+  width: 120px;
+  margin: 0 auto;
+}
+
+/* #canvas{
   width: 600px;
   padding: 200px 20px;
   text-align: center;
@@ -20,4 +49,6 @@ span{
 .nearby span:after{
   content: "nearby";
   margin-left: 10px;
-}
+} */
+
+
