Creating a Punching Bag game - style.css adjusting size

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-#bag{
+#bag {
   width: 200px;
   height: 400px;
   margin: 0 auto;
@@ -6,23 +6,25 @@
   background-size: 150%;
 }
 
-#bag.burst{
+#bag.burst {
+  width: 500px;
+  height: 400px;
   background: url(../images/0_gob_584.png) center no-repeat;
-  background-size: 200%;
+  background-size: 100%;
 }
 
-#bag-health{
+#bag-health {
   width: 200px;
   border: 4px solid #000;
   margin: 0 auto 20px auto;
 }
 
-#bag-health div{
-  height: 20px; 
+#bag-health div {
+  height: 20px;
   background: crimson;
 }
 
-#controls{
+#controls {
   width: 120px;
   margin: 0 auto;
 }
@@ -50,5 +52,3 @@ span{
   content: "nearby";
   margin-left: 10px;
 } */
-
-
